12-docker-k8s-basics/lab/manifests/01-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod
  labels:
    app: hello
spec:
  containers:
  - name: web
    image: hello-web:1.0
    ports:
    - containerPort: 80
    imagePullPolicy: IfNotPresent
