12-docker-k8s-basics/lab/manifests/06-cm-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cm-demo
spec:
  containers:
  - name: busybox
    image: busybox:1.36
    command: ["sh", "-c", "echo $MESSAGE && sleep 3600"]
