12-docker-k8s-basics/lab/manifests/08-secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-demo
spec:
  containers:
  - name: busybox
    image: busybox:1.36
    command: ["sh", "-c", "echo $API_KEY && sleep 3600"]
