12-docker-k8s-basics/lab/manifests/09-resources-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: resources-demo
spec:
  containers:
  - name: web
    image: nginx:alpine
    resources:
      requests:
        cpu: "100m"
        memory: "64Mi"
      limits:
        cpu: "300m"
        memory: "128Mi"
